--- a/MyNotebook/MainPage.xaml
+++ b/MyNotebook/MainPage.xaml
@@ -15,22 +15,13 @@
                             shell:SystemTray.IsVisible="False">
 
     <Grid x:Name="LayoutRoot"
-          Background="Transparent">
+          Background="{StaticResource BackgroundColorBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    Margin="0, 0, 12, 0">
-
-            <wc:Weather Margin="0, 0, 24, 0"/>
-            
-            <wc:Watch VerticalAlignment="Center"
-                      />
-            
-        </StackPanel>
+        <wc:TimeAndWeather Margin="0, 12, 0, 0"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
