--- a/MyNotebookCustomControls/Themes/generic.xaml
+++ b/MyNotebookCustomControls/Themes/generic.xaml
@@ -2,12 +2,11 @@
                     xmlns="http://schemas.microsoft.com/client/2007"
                     xmlns:wc="clr-namespace:MyNotebookCustomControls.TimeAndWeather">
 
-
     <Style TargetType="wc:Watch">
         <Setter Property="FontFamily"
                 Value="/MyNotebookAssets;component/Assets/Fonts/UnidreamLED.ttf#UnidreamLED" />
         <Setter Property="FontSize"
-                Value="42" />
+                Value="45" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="wc:Watch">
@@ -31,12 +30,16 @@
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{TemplateBinding Hour}" />
+                            <TextBlock Text="{TemplateBinding Hour}"
+                                       Foreground="{TemplateBinding Foreground}" />
                             <TextBlock Text=":"
                                        Grid.Column="1"
-                                       x:Name="tbkDot"/>
+                                       x:Name="tbkDot"
+                                       Margin="2, 0, 2, 0"
+                                       Foreground="{TemplateBinding Foreground}" />
                             <TextBlock Text="{TemplateBinding Minute}"
-                                       Grid.Column="2" />
+                                       Grid.Column="2"
+                                       Foreground="{TemplateBinding Foreground}" />
                         </Grid>
 
                         <Rectangle Width="1"
@@ -51,7 +54,8 @@
                                    FontSize="24"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
-                                   Margin="4, 0, 0, 0"/>
+                                   Margin="4, 0, 0, 0"
+                                   Foreground="{TemplateBinding Foreground}" />
 
                         <Rectangle Height="1"
                                    Grid.Column="2"
@@ -65,7 +69,8 @@
                                    FontSize="24"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
-                                   Margin="4, 0, 0, 0" />
+                                   Margin="4, 0, 0, 0" 
+                                   Foreground="{TemplateBinding Foreground}"/>
 
                     </Grid>
                 </ControlTemplate>
@@ -94,7 +99,8 @@
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"
                                    Grid.RowSpan="2"
-                                   Margin="0, 0, 8, 0"/>
+                                   Margin="0, 0, 8, 0"
+                                   Foreground="{TemplateBinding Foreground}" />
                         
                         <Grid Grid.Column="1">
                             <Grid.ColumnDefinitions>
@@ -116,11 +122,32 @@
                                    Grid.Row="1"
                                    Grid.Column="1"
                                    HorizontalAlignment="Center"
-                                   VerticalAlignment="Center" />
+                                   VerticalAlignment="Center"
+                                   Foreground="{TemplateBinding Foreground}" />
 
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>                
+        </Setter>
+    </Style>
+    
+    <Style TargetType="wc:TimeAndWeather">
+        <Setter Property="HorizontalAlignment"
+                Value="Right" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="wc:TimeAndWeather">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <wc:Weather Margin="0, 0, 12, 0"/>
+                        <wc:Watch VerticalAlignment="Center"
+                                  Grid.Column="1"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>              
         </Setter>
     </Style>
 
